force-app/main/default/objects/HDT_ColumnsFirstLevel__mdt/HDT_ColumnsFirstLevel__mdt.object-meta.xml
<CustomObject>
    <label>Columns First Level</label>
    <pluralLabel>Columns First Level</pluralLabel>
</CustomObject>