force-app/main/default/objects/HDT_ColumnsFirstLevel__mdt/fields/IsAmountField__c.field-meta.xml
<CustomField>
    <fullName>IsAmountField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Amount Field</label>
    <type>Checkbox</type>
</CustomField>