force-app/main/default/objects/HDT_ColumnsFirstLevel__mdt/fields/IsSortable__c.field-meta.xml
<CustomField>
    <fullName>IsSortable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sortable</label>
    <type>Checkbox</type>
</CustomField>