force-app/main/default/objects/HDT_ColumnsFirstLevel__mdt/fields/ShowTotAmountHere__c.field-meta.xml
<CustomField>
    <fullName>ShowTotAmountHere__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Tot Amount Here</label>
    <type>Checkbox</type>
</CustomField>