force-app/main/default/objects/HDT_ColumnsFirstLevel__mdt/fields/Tab__c.field-meta.xml
<CustomField>
    <fullName>Tab__c</fullName>
    <label>Tab</label>
    <referenceTo>HDT_TabConfiguration__mdt</referenceTo>
    <relationshipLabel>Columns First Level</relationshipLabel>
    <relationshipName>ColumnsFirstLevel</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>